# gnome-builder

./: configure.ac
libide/sourceview/: ide-source-view.c
plugins/: Makefile.am
plugins/func-jump/: Makefile.am  configure.ac  func-jump.c  func-jump.h  func-jump.plugin
